fix docker bugs

--- a/18_RestWithAspNet5_Docker_Suport/RestWithAspNet5/RestWithAspNet5/RestWithAspNet5.csproj
+++ b/18_RestWithAspNet5_Docker_Suport/RestWithAspNet5/RestWithAspNet5/RestWithAspNet5.csproj
@@ -23,6 +23,7 @@
   <ItemGroup>
     <Folder Include="db\dataset\" />
     <Folder Include="db\migrations\" />
+    <Folder Include="ci\" />
     <Folder Include="UploadDir\" />
   </ItemGroup>
 
