--- a/18_RestWithAspNet5_Docker_Suport/RestWithAspNet5/RestWithAspNet5/appsettings.json
+++ b/18_RestWithAspNet5_Docker_Suport/RestWithAspNet5/RestWithAspNet5/appsettings.json
@@ -1,6 +1,6 @@
 {
   "MySQLConnection": {
-    "MySQLConnectionString": "Server=db;DataBase=rest_with_asp_net;Uid=root;Pwd=docker;SslMode=none;"
+    "MySQLConnectionString": "Server=db;DataBase=rest_with_asp_net;Uid=nayton;Pwd=docker;SslMode=none;"
   },
 
   "TokenConfiguration": {
