--- a/18_RestWithAspNet5_Docker_Suport/RestWithAspNet5/docker-compose.yml
+++ b/18_RestWithAspNet5_Docker_Suport/RestWithAspNet5/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     environment:
       TZ: America/Sao_Paulo
       MYSQL_ROOT_PASSWORD: docker
-      MYSQL_USER: root
+      MYSQL_USER: nayton
       MYSQL_PASSWORD: docker
       MYSQL_DATABASE: rest_with_asp_net
     ports:
